language/move-prover/tests/sources/functional/signer_display.exp
Move prover returns: exiting with verification errors
error: unknown assertion failed
  ┌─ tests/sources/functional/signer_display.move:7:13
  │
7 │             assert Signer::address_of(account) == @0x1;
  │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/signer_display.move:5: f_incorrect
  =         account = <redacted>
  =     at tests/sources/functional/signer_display.move:7: f_incorrect
